# learn-opengl-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: fragShader.frag  lightCubeFragShader.frag  lightFragShader.frag  lightVertShader.vert  vertShader.vert
src/: main.cpp
src/graphics/: Shader.h
src/graphics/private/: Shader.cpp
src/scene/: Camera.h
src/scene/private/: Camera.cpp
